Updated pages paragraph text

--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,13 @@
     />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Main Site</title>
+    <title>Template Dashboards</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
+        >We're sorry but Template Dashboards doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
