--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="dashboard-logo.png" />
     <title>Template Dashboards</title>
   </head>
   <body>
