--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
       rel="stylesheet"
     />
 
+    <!-- Assistant -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="icon" href="dashboard-logo.png" />
     <title>Template Dashboards</title>
   </head>
