New icon possible

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="dashboard-logo.png" />
+    <link rel="icon" href="Dashboard-icon.png" />
     <title>Template Dashboards</title>
   </head>
   <body>
