--- a/public/index.html
+++ b/public/index.html
@@ -1,87 +1,70 @@
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Primary Meta Tags -->
-  <title>Template Dashboards | Clean & Modern Dashboard Templates</title>
-  <meta
-    name="title"
-    content="Template Dashboards | Clean & Modern Dashboard Templates"
-  />
-  <meta
-    name="description"
-    content="Explore a curated collection of beautifully designed, responsive dashboard templates — perfect for startups, SaaS apps, and internal tools."
-  />
-  <link rel="canonical" href="https://templatedashboards.com/" />
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Explore a variety of template dashboards..."
+    />
+    <meta
+      name="keywords"
+      content="dashboard templates, business dashboards, data templates"
+    />
+    <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://templatedashboards.com/" />
-  <meta
-    property="og:title"
-    content="Template Dashboards | Clean & Modern Dashboard Templates"
-  />
-  <meta
-    property="og:description"
-    content="Explore a curated collection of beautifully designed, responsive dashboard templates — perfect for startups, SaaS apps, and internal tools."
-  />
-  <meta
-    property="og:image"
-    content="https://templatedashboards.com/og-preview.jpg"
-  />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Template Dashboards" />
+    <meta
+      property="og:description"
+      content="Explore a variety of template dashboards..."
+    />
+    <meta property="og:image" content="/dashboard-logo.png" />
+    <meta property="og:url" content="https://templatedashboards.com" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://templatedashboards.com/" />
-  <meta
-    name="twitter:title"
-    content="Template Dashboards | Clean & Modern Dashboard Templates"
-  />
-  <meta
-    name="twitter:description"
-    content="Explore a curated collection of beautifully designed, responsive dashboard templates — perfect for startups, SaaS apps, and internal tools."
-  />
-  <meta
-    name="twitter:image"
-    content="https://templatedashboards.com/og-preview.jpg"
-  />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Template Dashboards" />
+    <meta
+      name="twitter:description"
+      content="Explore a variety of template dashboards..."
+    />
+    <meta name="twitter:image" content="/dashboard-logo.png" />
 
-  <!-- Font Awesome CDN -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
+    <!-- External Fonts (original fonts as per your layout) -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- FONTS -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-  <!-- Inter Tight -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
-  <!-- Unica One -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap"
-    rel="stylesheet"
-  />
-  <!-- Assistant -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet"
-  />
-
-  <link rel="icon" href="Dashboard-icon.png" />
+    <link rel="icon" href="dashboard-logo.png" />
+    <title>Template Dashboards</title>
+  </head>
   <body>
     <noscript>
-      <strong
-        >We're sorry but Template Dashboards doesn't work properly without
-        JavaScript enabled. Please enable it to continue.</strong
-      >
+      <strong>
+        We're sorry, but Template Dashboards doesn't work properly without
+        JavaScript enabled. Please enable it to continue.
+      </strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
-</head>
+</html>
