Updated SEO on index

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,13 @@
     <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Explore a variety of template dashboards..."
+      content="Browse professionally designed template dashboards for business, data visualization, and analytics. Preview, customize, and buy ready-to-use code."
     />
     <meta
       name="keywords"
-      content="dashboard templates, business dashboards, data templates"
+      content="dashboard templates, business dashboards, data dashboards, analytics templates, dashboard UI, admin dashboards, data visualization templates"
     />
+
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph Meta Tags -->
@@ -21,8 +22,9 @@
     <meta property="og:title" content="Template Dashboards" />
     <meta
       property="og:description"
-      content="Explore a variety of template dashboards..."
+      content="Browse professionally designed template dashboards for business, data visualization, and analytics. Preview, customize, and buy ready-to-use code."
     />
+
     <meta property="og:image" content="/dashboard-logo.png" />
     <meta property="og:url" content="https://templatedashboards.com" />
 
@@ -31,9 +33,30 @@
     <meta name="twitter:title" content="Template Dashboards" />
     <meta
       name="twitter:description"
-      content="Explore a variety of template dashboards..."
+      content="Browse professionally designed template dashboards for business, data visualization, and analytics. Preview, customize, and buy ready-to-use code."
     />
+
     <meta name="twitter:image" content="/dashboard-logo.png" />
+
+    <!-- Schema -->
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Template Dashboards",
+        "url": "https://templatedashboards.com",
+        "description": "Browse professionally designed template dashboards for business, data visualization, and analytics. Preview, customize, and buy ready-to-use code.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Template Dashboards",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://templatedashboards.com/dashboard-logo.png"
+          }
+        }
+      }
+    </script>
 
     <!-- External Fonts (original fonts as per your layout) -->
     <link
@@ -56,7 +79,9 @@
     />
 
     <link rel="icon" href="dashboard-logo.png" />
-    <title>Template Dashboards</title>
+    <title>
+      Template Dashboards | Prebuilt Frontend Dashboard Templates for Web Apps
+    </title>
   </head>
   <body>
     <noscript>
