--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,6 @@
       name="keywords"
       content="dashboard templates, business dashboards, data dashboards, analytics templates, dashboard UI, admin dashboards, data visualization templates"
     />
-
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph Meta Tags -->
@@ -24,8 +23,10 @@
       property="og:description"
       content="Browse professionally designed template dashboards for business, data visualization, and analytics. Preview, customize, and buy ready-to-use code."
     />
-
-    <meta property="og:image" content="/dashboard-logo.png" />
+    <meta
+      property="og:image"
+      content="https://templatedashboards.com/dashboard-logo.png"
+    />
     <meta property="og:url" content="https://templatedashboards.com" />
 
     <!-- Twitter Card Meta Tags -->
@@ -35,11 +36,12 @@
       name="twitter:description"
       content="Browse professionally designed template dashboards for business, data visualization, and analytics. Preview, customize, and buy ready-to-use code."
     />
-
-    <meta name="twitter:image" content="/dashboard-logo.png" />
+    <meta
+      name="twitter:image"
+      content="https://templatedashboards.com/dashboard-logo.png"
+    />
 
     <!-- Schema -->
-
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -58,7 +60,7 @@
       }
     </script>
 
-    <!-- External Fonts (original fonts as per your layout) -->
+    <!-- Fonts -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -78,7 +80,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="dashboard-logo.png" />
+    <link rel="icon" href="https://templatedashboards.com/dashboard-logo.png" />
     <title>
       Template Dashboards | Prebuilt Frontend Dashboard Templates for Web Apps
     </title>
