Updated nav alt tag and index

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Template Dashboards",
+        "alternateName": "templatedashboards.com",
         "url": "https://templatedashboards.com",
         "description": "Browse professionally designed template dashboards for business, data visualization, and analytics. Preview, customize, and buy ready-to-use code.",
         "publisher": {
