--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,10 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Unica+One:wght@400;600&display=swap"
       rel="stylesheet"
     />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
