Updated social image

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     />
     <meta
       property="og:image"
-      content="https://templatedashboards.com/dashboard-logo.png"
+      content="https://templatedashboards.com/template-dashboards-preview.png"
     />
     <meta property="og:url" content="https://templatedashboards.com" />
 
@@ -38,7 +38,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://templatedashboards.com/dashboard-logo.png"
+      content="https://templatedashboards.com/template-dashboards-preview.png"
     />
 
     <!-- Schema -->
