--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,21 @@
     <title>
       Template Dashboards | Prebuilt Frontend Dashboard Templates for Web Apps
     </title>
+
+    <!-- Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LD8MHQE7NK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-LD8MHQE7NK");
+    </script>
   </head>
   <body>
     <div id="app"></div>
